add the login css

--- a/server/src/app/pages/login/login.component.html
+++ b/server/src/app/pages/login/login.component.html
@@ -1,29 +1,53 @@
-
-<div class="parent">
-    <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form action="#">
-                <div>
-                    <select [(ngModel)]="loginObj.tipo_usuario" name="tipo_usuario" required>
-                        <option value="estudiante">Estudiante</option>
-                        <option value="especialista">Especialista</option>
-                    </select>
-                </div>
-                <div class="input-box">
-                    <input type="email" [(ngModel)]="loginObj.email" name="EmailId" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <input type="password" [(ngModel)]="loginObj.clave" name="Password" required>
-                    <label>Password</label>
-                </div>
-
-                
-                <button type="button" class="btn" (click)="onLogin()" >Login</button>
-                 
-            </form>
-        </div>
-        
+<main>
+  <div id="contenedor">
+    <div class="image-column">
+      <img
+        src="../../../assets/images/login-image.png"
+        alt="Login to Sisvita account"
+        width="500px"
+      />
     </div>
-</div>
+    <div class="form-column">
+      <p>Te damos la bienvenida de nuevo</p>
+      <h2>Iniciar Sesión</h2>
+      <form action="#">
+        <div class="selector">
+          <select
+            [(ngModel)]="loginObj.tipo_usuario"
+            name="tipo_usuario"
+            required
+          >
+            <option value="estudiante">Estudiante</option>
+            <option value="especialista">Especialista</option>
+          </select>
+        </div>
+        <div class="input-box">
+          <label>
+            Email<br />
+            <input
+              [(ngModel)]="loginObj.email"
+              type="email"
+              name="EmailId"
+              placeholder="example@example.com"
+              required
+            />
+          </label>
+        </div>
+        <div class="input-box">
+          <label
+            >Password<br />
+            <input
+              type="password"
+              [(ngModel)]="loginObj.clave"
+              name="Password"
+              placeholder="Password"
+              required
+            />
+          </label>
+        </div>
+
+        <button type="button" class="btn" (click)="onLogin()">Login</button>
+      </form>
+    </div>
+  </div>
+</main>
