--- a/server/src/app/pages/layout/header/header.component.html
+++ b/server/src/app/pages/layout/header/header.component.html
@@ -1,1 +1,13 @@
-<p>Este es el header</p>
+<header>
+  <div class="logo">
+    <img src="ruta_del_logo.png" alt="Logo de SISVITA" />
+    <h1>SISVITA</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#">Enlace 1</a></li>
+      <li><a href="#">Enlace 2</a></li>
+      <li><a href="#">Enlace 3</a></li>
+    </ul>
+  </nav>
+</header>
