--- a/server/src/app/pages/login/login.component.html
+++ b/server/src/app/pages/login/login.component.html
@@ -45,9 +45,14 @@
             />
           </label>
         </div>
-
+        <div class="link">
+          <a routerLink="/forgot-password">¿Olvidaste tu contraseña?</a>
+        </div>
         <button type="button" class="btn" (click)="onLogin()">Login</button>
       </form>
+      <div class="link-registro">
+        ¿No tienes una cuenta? <a routerLink="/register">Regístrate</a>
+      </div>
     </div>
   </div>
 </main>
