--- a/server/src/app/pages/test/cognitivo/cognitivo.component.html
+++ b/server/src/app/pages/test/cognitivo/cognitivo.component.html
@@ -1,1 +1,60 @@
-<p>cognitivo works!</p>
+<!-- cognitivo.component.html -->
+<div class="container">
+    <h2 class="seccion">PREGUNTAS COGNITIVAS</h2>
+  
+    <div class="situacion-nombre">Situación:</div>
+    <p class="situacion">
+      Ante un examen en el que me juego mucho o si voy a ser entrevistado para un trabajo importante.
+    </p>
+  
+    <p class="pregunta">Me preocupo fácilmente.</p>
+    <div class="options">
+      <div class="option">
+        <input type="radio" id="casi-nunca-2" name="preocupacion-2" class="radio">
+        <label for="casi-nunca-2">Casi nunca</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="pocas-veces-2" name="preocupacion-2" class="radio">
+        <label for="pocas-veces-2">Pocas veces</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="unas-veces-2" name="preocupacion-2" class="radio">
+        <label for="unas-veces-2">Unas veces sí</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="muchas-veces-2" name="preocupacion-2" class="radio">
+        <label for="muchas-veces-2">Muchas veces</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="casi-siempre-2" name="preocupacion-2" class="radio">
+        <label for="casi-siempre-2">Casi siempre</label>
+      </div>
+    </div>
+  
+    <p class="pregunta">Me cuesta concentrarme.</p>
+    <div class="options">
+      <div class="option">
+        <input type="radio" id="casi-nunca-3" name="concentracion" class="radio">
+        <label for="casi-nunca-3">Casi nunca</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="pocas-veces-3" name="concentracion" class="radio">
+        <label for="pocas-veces-3">Pocas veces</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="unas-veces-3" name="concentracion" class="radio">
+        <label for="unas-veces-3">Unas veces sí</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="muchas-veces-3" name="concentracion" class="radio">
+        <label for="muchas-veces-3">Muchas veces</label>
+      </div>
+      <div class="option">
+        <input type="radio" id="casi-siempre-3" name="concentracion" class="radio">
+        <label for="casi-siempre-3">Casi siempre</label>
+      </div>
+    </div>
+  
+    <button type="submit">Continuar</button>
+  </div>
+  
