--- a/server/src/app/pages/layout/header/header.component.html
+++ b/server/src/app/pages/layout/header/header.component.html
@@ -5,9 +5,9 @@
   </div>
   <nav>
     <ul>
-      <li><a href="#">Enlace 1</a></li>
-      <li><a href="#">Enlace 2</a></li>
-      <li><a href="#">Enlace 3</a></li>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Realizar Test</a></li>
+      <li><a href="#">Perfil</a></li>
     </ul>
   </nav>
 </header>
