--- a/server/src/app/pages/login/login.component.css
+++ b/server/src/app/pages/login/login.component.css
@@ -65,6 +65,13 @@ main {
   font-size: 1.5rem;
 }
 
+.visible {
+  display: block !important;
+}
+
+.especialidad {
+  display: none;
+}
 .input-box input {
   width: 100%;
   margin-top: 0.5rem;
