--- a/server/src/app/pages/register/register.component.html
+++ b/server/src/app/pages/register/register.component.html
@@ -1,62 +1,150 @@
-<div class="authentication-bg min-vh-100">
-    <div class="container">
-        <div class="d-flex flex-column min-vh-100 px-3 pt-4">
-            <div class="row justify-content-center my-auto">
-                <div class="col-md-8 col-lg-6 col-xl-4">
-                    <div class="py-5">
-                        <div class="text-center">
-                            <div class="mb-4 pb-4">
-                                <a routerLink="/" class="d-block auth-logo">
-                                    <img src="assets/images/logo-light.png" alt="" height="23">
-                                </a>
-                            </div>
-                            <div class="mb-4 pb-2">
-                                <h5 class="text-white">Register Account</h5>
-                                <p class="text-white-50 mb-0">Register for a new account with Landsay</p>
-                            </div>
-                       </div>
-                        <form class="auth-form text-white">
-                            <div class="mb-3">
-                                <label for="firstname" class="form-label">First Name</label>
-                                <input type="text" class="form-control" id="firstname"
-                                    placeholder="First Name">
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label" for="email">Email</label>
-                                <input type="email" class="form-control" id="email"
-                                    placeholder="Enter Email">
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label" for="userpassword">Password</label>
-                                <input type="password" class="form-control" id="userpassword"
-                                    placeholder="Enter password">
-                            </div>
-                            <div class="mb-4">
-                                <div class="form-check"><input class="form-check-input" type="checkbox" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">I agree to the <a href="javascript: void(0);" class="text-white text-decoration-underline">Terms and conditions</a></label>
-                                </div>
-                            </div>
-                            <div class="mt-3">
-                                <button type="submit" class="btn btn-primary w-100">Register Now</button>
-                            </div>
-                        </form><!-- end form -->
-
-                        <div class="mt-5 text-center text-white-50">
-                            <p>Already a member ? <a routerLink="/login" class="fw-medium text-white text-decoration-underline"> Login </a></p>
-                        </div>
-                    </div>
-                </div><!-- end col -->
-            </div><!-- end row -->
-
-            <div class="col-xl-12">
-                <div class="text-center text-white-50 p-4">
-                        <p class="mb-0"> {{year}} © Landsay - Design with <i
-                            class="mdi mdi-heart text-danger"></i>  by 
-                            <a href="https://themeforest.net/search/themesdesign" class="text-muted">Themesdesign.</a>
-                        </p>
-                </div>
-            </div><!-- end col -->
+<main>
+  <div class="cont">
+    <h2>¡Regístrate en Sisvita!</h2>
+    <p class="sub">Es rápido y fácil.</p>
+    <form action="#">
+      <div class="input-label 2-col">
+        <div>
+          <label
+            ><span>Estado Civil</span><br />
+            <select name="estado_civil" [(ngModel)]="registerObj.estado_civil">
+              <option value="S">Soltero</option>
+              <option value="C">Casado</option>
+              <option value="D">Divorciado</option>
+              <option value="V">Viudo</option>
+            </select>
+          </label>
         </div>
-    </div><!-- end container -->
-</div>
-<!-- end authentication section -->
+        <div>
+          <label
+            ><span>Tipo de usuario</span><br />
+            <select name="tipo_usuario" [(ngModel)]="registerObj.tipo_usuario">
+              <option value="estudiante">Estudiante</option>
+              <option value="especialista">Especialista</option>
+            </select>
+          </label>
+        </div>
+      </div>
+      <div class="input-label 2-col">
+        <div>
+          <label
+            ><span>Codigo de Estudiante</span> <br />
+            <input
+              type="number"
+              name="codigo_estudiante"
+              [disabled]="registerObj.tipo_usuario === 'especialista'"
+              placeholder="21200000"
+              [(ngModel)]="registerObj.codigo_estudiante"
+              required
+            />
+          </label>
+        </div>
+        <div>
+          <label
+            ><span>Especialidad</span> <br />
+            <input
+              type="text"
+              name="especialidad"
+              placeholder="Sistemas"
+              [(ngModel)]="registerObj.especialidad"
+              required
+            />
+          </label>
+        </div>
+      </div>
+      <div class="input-label 2-col">
+        <label>
+          <input
+            type="text"
+            name="nombre"
+            placeholder="Nombre"
+            [(ngModel)]="registerObj.nombre"
+            required
+          />
+        </label>
+        <label>
+          <input
+            type="text"
+            name="apellido"
+            placeholder="Apellido"
+            [(ngModel)]="registerObj.apellido"
+            required
+          />
+        </label>
+      </div>
+      <div class="input-label col-1">
+        <label>
+          <input
+            type="email"
+            name="email"
+            placeholder="example@example.com"
+            [(ngModel)]="registerObj.email"
+            required
+          />
+        </label>
+      </div>
+      <div class="input-label 2-col">
+        <label>
+          <input
+            type="password"
+            name="password"
+            placeholder="Contraseña"
+            required
+            minlength="5"
+            [(ngModel)]="registerObj.clave"
+          />
+        </label>
+        <label>
+          <input
+            type="password"
+            name="confirm_password"
+            placeholder="Confirmar Contraseña"
+            required
+            minlength="5"
+            [(ngModel)]="registerObj.confirm_clave"
+          />
+        </label>
+      </div>
+      <div
+        *ngIf="registerObj.clave !== registerObj.confirm_clave"
+        class="error-message"
+      >
+        Las contraseñas no coinciden.
+      </div>
+      <div class="input-label 2-col">
+        <div>
+          <label
+            ><span>Fecha de nacimiento</span> <br />
+            <input
+              type="date"
+              name="trip-start"
+              value="2024-01-01"
+              min="1980-01-01"
+              max="2014-12-31"
+              [(ngModel)]="registerObj.fecha_nacimiento"
+            />
+          </label>
+        </div>
+        <div>
+          <label
+            ><span>Género</span><br />
+            <select name="genero" [(ngModel)]="registerObj.sexo">
+              <option value="M">Masculino</option>
+              <option value="F">Femenino</option>
+            </select>
+          </label>
+        </div>
+      </div>
+      <div class="privacy-poly">
+        <p>
+          Al hacer clic en "Registrarse", aceptas nuestras Condiciones, la
+          Política de datos y la Política de cookies.
+        </p>
+      </div>
+
+      <div class="button">
+        <button type="button" (click)="onRegister()">Registrarse</button>
+      </div>
+    </form>
+  </div>
+</main>
