tipos de test actualizados

--- a/server/src/app/pages/test/fisiologico/fisiologico.component.html
+++ b/server/src/app/pages/test/fisiologico/fisiologico.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
 <p>fisiologico works!</p>
 
 <button (click)="testMotor()">Test Motor</button>
+<app-footer></app-footer>
