--- a/server/src/app/pages/layout/header/header.component.html
+++ b/server/src/app/pages/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
   <div class="logo">
     <img src="ruta_del_logo.png" alt="Logo de SISVITA" />
     <h1>SISVITA</h1>
@@ -10,4 +10,4 @@
       <li><a href="#">Perfil</a></li>
     </ul>
   </nav>
-</header>
+</header>-->
