--- a/server/src/app/pages/test/motor/motor.component.html
+++ b/server/src/app/pages/test/motor/motor.component.html
@@ -30,7 +30,12 @@
     <hr class="separator">
   </div>
 
-  <!-- Botón para continuar al test fisiológico -->
+  <!-- Mensaje de advertencia -->
+  <p class="mensaje-advertencia" [hidden]="formularioCompleto() || !mostrarAdvertencia">
+    Complete todas las preguntas antes de finalizar
+  </p>
+
+  <!-- Botón para Finalizar el test-->
   <button class="botons" (click)="testEnd()">
     FINALIZAR
   </button>
