--- a/v2/server/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/v2/server/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<!-- <div class="grid-container">
   <h1 class="mat-h1">Dashboard</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     @for (card of cards | async; track card) {
@@ -29,3 +29,4 @@
     }
   </mat-grid-list>
 </div>
+-->
