--- a/v2/server/src/app/pages/test/test.component.html
+++ b/v2/server/src/app/pages/test/test.component.html
@@ -1,1 +1,36 @@
-<p>test works!</p>
+<div class="main">
+  <div class="container">
+    <div class="info">
+      <h2>Test Listados en el Sistema</h2>
+    </div>
+    <br />
+    <br />
+    <h3>Tests:</h3>
+    <div class="container-card">
+      <div *ngFor="let test of tests">
+        <mat-card class="card-content">
+          <mat-card-header>
+            <mat-card-title>Test: {{ test.nombre }}</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <mat-label>Secciones: {{ test.secciones.length }}</mat-label
+            ><br />
+            <mat-label
+              >Situaciones: {{ this.getTotalSituaciones(test) }}</mat-label
+            ><br />
+            <mat-label>Preguntas: {{ this.getTotalPreguntas(test) }}</mat-label>
+          </mat-card-content>
+          <mat-card-actions class="button-card">
+            <button
+              mat-raised-button
+              color="primary"
+              (click)="this.goToTestById(this.test.id_test)"
+            >
+              Realizar Test
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
