--- a/v2/server/src/app/app.component.html
+++ b/v2/server/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet />
+<!-- src/app/app.component.html -->
+<mat-toolbar class="mat-elevation-z3">
+    <button mat-icon-button (click)="collapsed.set(!collapsed())">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+  <mat-sidenav-container>
+    <mat-sidenav opened mode="side"[style.width]="sidenavWidth()">
+     <app-custom-sidenav [collapsed]="collapsed"/>
+    </mat-sidenav>
+    <mat-sidenav-content class="content"[style.margin-left]="sidenavWidth()">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+  
