--- a/v2/server/src/app/components/custom-sidenav/custom-sidenav.component.html
+++ b/v2/server/src/app/components/custom-sidenav/custom-sidenav.component.html
@@ -12,12 +12,14 @@
   </div>
 </header>
 <mat-nav-list>
-  @for (item of menuItems(); track $index) {
-  <a mat-list-item>
-    <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-    @if (!sidenavCollapsed()) {
-    <span matListItemTitle>{{ item.label }}</span>
-    }
-  </a>
+  @if (usertype) { }@else {
+  <p>Hubo un error</p>
   }
+
+  <ng-container *ngFor="let item of menuItems(); let $index = index">
+    <a [routerLink]="'paciente' !== null ? item.route : 'error'" mat-list-item>
+      <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+      <span matListItemTitle *ngIf="!sidenavCollapsed()">{{ item.label }}</span>
+    </a>
+  </ng-container>
 </mat-nav-list>
